--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
               <span>R</span>
               <span>T</span>
               <span>H</span>
+              <span>D</span>
               <span>A</span>
               <span>Y</span>
             </div>
