The messag new branch changes

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
               <span class="letter"> - </span>
               <span class="letter">M</span>
               <span class="letter">E</span>
-              <span class="letter">!!</span>
+              <span class="letter">!?</span>
             </div>
           </div>
         </div>
